# tmux-mcp

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  test_mcp.py  test_tmux.py
examples/: interactive_cli_example.py  python_repl_example.py  vim_editor_example.py
tmux_mcp/: __init__.py  server.py
