[project]
name = "tmux-mcp"
version = "0.1.0"
description = "A Model Context Protocol server that provides access to interactive CLI programs via tmux"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.3",
]

[project.scripts]
tmux-mcp = "tmux_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
